Fix #105524: Texture paint broken after recent cleanup

eb68334b58d22e325af replaced the pointer to looptris with a span
but left the variable for the number of looptris unset at zero. Fix by
using the size of the span instead.